修改侧边栏

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,3 +7,8 @@ $menuBg: #fff;
 $menuText: #162B64;
 $menuActiveText: #435EBE;
 
+:export {
+    menuBg: $menuBg;
+    menuText: $menuText;
+    menuActiveText: $menuActiveText;
+  }
